# Mix-Analyzer

./: .gitignore  CMakeLists.txt  README.md
Source/: HistoryAnalyzer.cpp  HistoryAnalyzer.h  LayoutPicker.h  LoudnessDisplay.cpp  LoudnessDisplay.h  LoudnessSettingsPanel.cpp  LoudnessSettingsPanel.h  MeterLayout.h  MixLookAndFeel.cpp  MixLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBar.cpp  PresetBar.h  PresetStore.cpp  PresetStore.h  SoundFieldDisplay.cpp  SoundFieldDisplay.h  SoundFieldSettingsPanel.cpp  SoundFieldSettingsPanel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  SpectrumSettingsPanel.cpp  SpectrumSettingsPanel.h  StandaloneApp.cpp  StandaloneWindow.h  TransportButton.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/ebur128/: ebur128.c  queue.h
